--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ img{
 }
 .wrapper{
     min-height: 100vh;
-    background-color: #d7d2ed;
+    background-color: currentColor;
 }
 .container{
     max-width: 1200px;
